# py-project-template

./: .env  .gitignore  .isort.cfg  .pylintrc  LICENSE  Makefile  README.md  README.template.md  pyproject.toml  requirements-dev.txt  requirements.txt  settings.json  setup.cfg
.github/workflows/: main.yml  pythonapp.yml
docs/: README.md  ci-pipeline.md  deploy.md  development.md  installation.md  resources.md  usage.md
docs/template-notes/: README.md  poetry.md  related-projects.md  ruff.md  upgrade-packages.md
htmlscreenshot/: __init__.py  __main__.py  download.py  lib.py  sample.txt  scrape.py
pyproject/: __init__.py  foo.py  pyproject.py  pyprojecttemplate.py  script_sample.py
pyproject/etc/: .gitkeep
pyproject/lib/: __init__.py
pyprojecttemplate/: __init__.py  pyprojecttemplate.py  script_sample.py
pyprojecttemplate/lib/: __init__.py
pyprojecttemplate/utils/: __init__.py
tests/: __init__.py
tests/unittests/: __init__.py  test_foo.py  test_script_sample.py
