[tool.poetry]
# Remove this line if you want to distribute your project as an installable package.
package-mode = false
name = "py-project-template"
version = "X.X.X"
description = "Starter template for a Python app - including CI and docs"
authors = ["Michael Currin <18750745+MichaelCurrin@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pylint = "^3.3.2"
pylint-exit = "^1.2.0"
mypy = "^1.14.0"
pytest = "^8.3.4"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
